--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -23,4 +24,15 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.img-container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.card {
+  flex-direction: column;
+  
 }
